command-derive/tests/04-fromstriter-reject-enum.stderr
error: expected `struct`
 --> $DIR/04-fromstriter-reject-enum.rs:4:1
  |
4 | enum Handshake {
  | ^^^^
