command-derive/tests/04-fromstriter-reject-enum.rs
use command_derive::*;

#[derive(FromStrIter)]
enum Handshake {
    One,
    Two,
    Three
}

fn main() {}
